--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,10 @@ jobs:
      - uses: actions/checkout@v2
 
      - name: setup gcloud
-       run: curl https://sdk.cloud.google.com | bash > /dev/null
+       run: |
+        curl https://sdk.cloud.google.com | bash > /dev/null
+        source $HOME/google-cloud-sdk/path.bash.inc
+
+     - name: setup kubectl
+       run: gcloud components update kubectl
 
